--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
 										<div class="row">
 											<div class="col">
 												<h5 class="mb-1">0</h5>
-												<span class="text-success">Total Sale</span>
+												<span class="text-success">Android analysis</span>
 											</div>
 										</div>
 									</div>
@@ -1020,7 +1020,7 @@
 										<div class="row">
 											<div class="col">
 												<h5 class="text-white mb-1">$0</h5>
-												<span class="text-white">Total Eraning</span>
+												<span class="text-white">IOS analysis</span>
 											</div>
 										</div>
 									</div>
@@ -1035,7 +1035,7 @@
 										<div class="row">
 											<div class="col text-white">
 												<h5 class="text-white mb-1">0</h5>
-												<span>VIEWS OF YOUR PROJECT</span>
+												<span>Notification analysis</span>
 											</div>
 										</div>
 									</div>
@@ -1047,7 +1047,7 @@
 							<div class="col-xl-3 col-xxl-3 col-lg-6 col-sm-6">
 								<div class="card overflow-hidden">
 									<div class="card-body px-4 py-4">
-										<h5 class="mb-3">0 / <small class="text-primary">Sales Status</small></h5>
+										<h5 class="mb-3">0 / <small class="text-primary">App Orders analysis</small></h5>
 										<div class="chart-point">
 											<div class="check-point-area">
 												<canvas id="ShareProfit2"></canvas>
@@ -1078,8 +1078,7 @@
 						<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
 							<div class="card card--flotLine1">
 								<div class="card-header">
-									<h4 class="card-title">Daily Installs(Line Chart)</h4>
-									<h4 class="card-title">Daily Uninstalls(Line Chart)</h4>
+									<h4 class="card-title">Daily Installs(Line Chart)</h4> 
 									<span class="total-number">0</span>
 								</div>
 								<div class="card-body">
@@ -1089,8 +1088,7 @@
 						</div> 
 						<div class="col-xl-6 col-xxl-6 col-lg-6 col-sm-12"> 
 							<div class="card card--flotLine1">
-								<div class="card-header">
-									<h4 class="card-title">Daily Installs(Line Chart)</h4>
+								<div class="card-header"> 
 									<h4 class="card-title">Daily Uninstalls(Line Chart)</h4>
 									<span class="total-number">0</span>
 								</div>
