--- a/chart-chartist.html
+++ b/chart-chartist.html
@@ -1117,7 +1117,7 @@
                                         <h4 class="card-title">Line chart with area</h4>
                                     </div>
                                     <div class="card-body">
-                                        <div id="chart-with-area" class="ct-chart ct-golden-section chartlist-chart"></div>
+                                        <!-- <div id="chart-with-area" class="ct-chart ct-golden-section chartlist-chart"></div> -->
                                     </div>
                                 </div>
                             </div>
