--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
 										<div class="row">
 											<div class="col">
 												<h5 class="mb-1">0</h5>
-												<span class="text-success">Android analysis</span>
+												<span class="text-success">Android Installs</span>
 											</div>
 										</div>
 									</div>
@@ -1020,7 +1020,7 @@
 										<div class="row">
 											<div class="col">
 												<h5 class="text-white mb-1">$0</h5>
-												<span class="text-white">IOS analysis</span>
+												<span class="text-white">IOS Installs</span>
 											</div>
 										</div>
 									</div>
@@ -1035,7 +1035,7 @@
 										<div class="row">
 											<div class="col text-white">
 												<h5 class="text-white mb-1">0</h5>
-												<span>Notification analysis</span>
+												<span>Notification Installs</span>
 											</div>
 										</div>
 									</div>
@@ -1047,7 +1047,7 @@
 							<div class="col-xl-3 col-xxl-3 col-lg-6 col-sm-6">
 								<div class="card overflow-hidden">
 									<div class="card-body px-4 py-4">
-										<h5 class="mb-3">0 / <small class="text-primary">App Orders analysis</small></h5>
+										<h5 class="mb-3">0 / <small class="text-primary">App Orders Installs</small></h5>
 										<div class="chart-point">
 											<div class="check-point-area">
 												<canvas id="ShareProfit2"></canvas>
