--- a/notification-analytics.html
+++ b/notification-analytics.html
@@ -987,7 +987,7 @@
                       <h4 class="card-title">History 2013 - 2021</h4>
                       <p class="mb-1">Lorem Ipsum is simply dummy text of the printing</p>
                     </div>
-                    <div class="card-action">
+                    <!-- <div class="card-action">
                       <ul class="nav nav-tabs" role="tablist">
                         <li class="nav-item">
                           <a class="nav-link active" data-toggle="tab" href="#user" role="tab">
@@ -1005,7 +1005,7 @@
                           </a>
                         </li>
                       </ul>
-                    </div>
+                    </div> -->
                   </div>
                   <div class="card-body">
                     <div class="tab-content tab-content--chart" id="myTabContent"> 
@@ -1046,8 +1046,10 @@
 												</ul>
 											</div>
                       <div class="tab-pane fade show active" id="user" role="tabpanel"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                        <canvas id="activity" class="chartjs chartjs-render-monitor" height="270" style="display: block; width: 635px; height: 270px;" width="635"></canvas>
-                      </div>
+                        <!-- <canvas id="activity" class="chartjs chartjs-render-monitor" height="270" style="display: block; width: 635px; height: 270px;" width="635"></canvas> -->
+													<div id="chart-with-area" class="ct-chart ct-golden-section chartlist-chart"></div>
+											</div>
+											</div>
                     </div>
                   </div>
                 </div>
@@ -1095,6 +1097,11 @@
 
 	<!-- Chartist -->
 	<script src="./vendor/chartist/js/chartist.min.js"></script>
+	
+	  <!-- Chart Chartist plugin files -->
+    <script src="./vendor/chartist/js/chartist.min.js"></script>
+    <script src="./vendor/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
+    <script src="./js/plugins-init/chartist-init.js"></script>
 
 	<!-- Dashboard 1 -->
 	<script src="./js/dashboard/dashboard-1.js"></script>
