--- a/app-orders.html
+++ b/app-orders.html
@@ -995,7 +995,7 @@
 							<div class="col-xl-6 col-xxl-6 col-lg-12 col-sm-12">
 								<div class="card">
 									<div class="card-header">
-											<h4 class="card-title">Basic Bar Chart</h4>
+											<h4 class="card-title">Daily Sales Orders</h4>
 									</div>
 									<div class="card-body">
 											<canvas id="barChart_1"></canvas>
@@ -1005,7 +1005,7 @@
 							<div class="col-xl-6 col-xxl-6 col-lg-12 col-sm-12">
 								<div class="card">
 									<div class="card-header">
-											<h4 class="card-title">Gradient Bar Chart</h4>
+											<h4 class="card-title">Daily Sales</h4>
 									</div>
 									<div class="card-body">
 											<canvas id="barChart_2"></canvas>
